初始化和数据基本层搭建

--- a/sdk_dcas_api/build.gradle
+++ b/sdk_dcas_api/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     api "androidx.core:core-ktx:$kotlin_version"
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    api 'com.github.lucifinilsu:sad-basic:0.4.3'
+    api "com.github.lucifinilsu:sad-jetpack-v1-datamodel:0.0.8"
 }
